[metadata]
name = afwizard_library
version = file: VERSION
description = Community-contributed filter pipelines for AFWizard
long_description = file: README.md
long_description_content_type = text/markdown
author = Dominic Kempf
author_email = ssc@iwr.uni-heidelberg.de
license = MIT
license_files = LICENSE.md
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True

[options.package_data]
* =
    *.json
